# 42-filit

./: CMakeLists.txt  Makefile  a.out  fillit  fillit.h  ft_map_size.c  get_solution.c  main.c  printout.c  save_tetramino.c  validate_file.c
FINAL/: fillit.h
FINAL FILLIT/: fillit
correct_file/: valid_17
libft/: Makefile  ft_atoi.c  ft_strlen.c  ft_strnstr.c  libft.h
